Embed native signer into fq-api